<resources>
    <string name="app_name">Indonesians Cultures</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Home</string>
    <string name="navigation_view_item_8">Provinsi</string>
    <string name="navigation_view_item_2">Pakaian Adat</string>
    <string name="navigation_view_item_3">Lagu Daerah</string>
    <string name="navigation_view_item_4">Rumah Adat</string>
    <string name="navigation_view_item_5">Makanan Daerah</string>
    <string name="navigation_view_item_6">Wisata Daerah</string>
    <string name="navigation_view_item_7">Tentang Kami</string>
    <string name="title_activity_wisata">WisataActivity</string>
</resources>
